<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quickRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingTop="34dp"
    android:paddingRight="18dp"
    android:paddingBottom="18dp">

    <TextView
        android:id="@+id/quickTitle"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:text="@string/quick_capture_title"
        android:textColor="@color/primary_text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/quickNoteInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:background="@drawable/input_background"
        android:gravity="top|start"
        android:hint="@string/note_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textMultiLine|textCapSentences"
        android:padding="14dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/quickSaveButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/accent_green_dark"
        android:text="@string/save_note"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
